# rtdfeatures

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: smoke_transform_performance.py
docs/: 01_product_charter.md  02_core_concepts.md  03_scope_and_non_goals.md  04_kernel_learning_design.md  05_feature_generation_design.md  06_data_model.md  07_validation_and_diagnostics.md  08_api_design.md  09_package_architecture.md  10_examples_and_use_cases.md  11_existing_package_lessons.md  12_development_roadmap.md  13_documentation_delivery_decision.md  13_post_v1_rtdfeatures_roadmap.md  14_cross_field_research_summary.md  15_process_feature_compiler_context.md  16_feature_contracts_and_validation.md  17_process_graph_design_principles.md  RELEASE_NOTES.md  index.md  install.md  quickstart.md
docs/api/: evidence.md  features.md  kernels.md  learners.md  sklearn-adapter.md  stability.md
docs/benchmarks/: benchmark_release_gate_checklist.md  nrtd_benchmark_layers.md  wp0_archive_inspection.json  wp0_nrtd_archive_inventory.md
docs/concepts/: data-model.md  (+3 more)
examples/: 01_quickstart_simplex.py  02_parametric_vs_empirical.py  03_categorical_genealogy.py  04_multimodal_kernel.py  05_weak_identifiability.py  06_oof_feature_generation.py  07_bypass_recycle.py  08_sklearn_adapter.py  nrtd_laminar_flow_worked_example.py  parametric_empirical_baseline_fits.py  plant_first_example_gallery.py
scripts/: extract_nrtd_benchmarks.py  inspect_nrtd_archive.py
tests/: test_api_contract_v1.py  test_architecture_invariants_v1.py  test_archive_inspection.py  test_benchmark_extraction.py  test_bootstrap_candidate_set.py  test_bootstrap_contract.py  test_bootstrap_reporting.py  test_bootstrap_single_fit.py  test_bootstrap_splitter.py  test_bootstrap_summaries.py  test_contract_examples.py  test_diagnostics.py  test_diagnostics_transform_coverage.py  test_docs_consistency.py  test_docs_links_and_hygiene_v1.py  test_docs_quality.py  test_exception_handling_contract.py  test_feature_accumulator_v1.py  test_feature_evidence.py  test_feature_evidence_contract.py  test_feature_helpers_v1.py  test_feature_names_contract_v1.py  test_feature_registry_contract.py  test_feature_registry_generation_v1.py  test_feature_registry_v1.py  test_features_shared_integration.py  test_integration_readiness.py  test_internal_simplification_baselines_v1.py  test_kernel_candidate_comparison_selection.py  test_kernel_candidate_fitting.py  test_kernel_candidate_objects.py  test_kernel_family_learners.py  test_kernels.py  test_learner_base_contract_v1.py  test_learner_fit_assembly_v1.py  test_learner_identifiability_v1.py  test_learner_optimization_and_structure_v1.py  test_learners_family_support.py  test_learners_fit_contract.py  test_oof_candidate_path.py  (+37 more)
(+99 files in other folders)
