[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtdfeatures"
version = "1.0.0"
description = "Learn constrained causal kernels and generate Polars feature tables plus diagnostics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "rtdfeatures maintainers" },
]
keywords = [
  "kernel",
  "time-series",
  "feature-engineering",
  "process-industry",
  "polars",
  "causal",
  "residence time distribution",
  "metallurgy",
  "process engineering",
  "mineral engineering"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.24",
  "polars>=0.20",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/MMerryweather/rtdfeatures"
Repository = "https://github.com/MMerryweather/rtdfeatures"
Documentation = "https://github.com/MMerryweather/rtdfeatures/tree/main/docs"
"Changelog" = "https://github.com/MMerryweather/rtdfeatures/releases"
"Bug Tracker" = "https://github.com/MMerryweather/rtdfeatures/issues"

[project.optional-dependencies]
dev = [
  "build",
  "mypy",
  "pyarrow",
  "pytest",
  "pytest-cov>=5",
  "ruff",
  "twine",
]
test = [
  "pytest",
  "pyarrow",
]
examples = [
  "matplotlib",
  "seaborn",
]
benchmark = [
  "pyarrow",
]
sklearn = [
  "scikit-learn>=1.3",
  "pandas>=2.0",
]

[tool.setuptools.package-data]
rtdfeatures = ["py.typed"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra -m \"not external_data\""
markers = [
  "external_data: optional tests that require benchmark files and are excluded from default CI",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
explicit_package_bases = true

[tool.coverage.run]
source = ["src/rtdfeatures"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 88
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
